Bug 151946 - Opening spreadsheet very slow
Summary: Opening spreadsheet very slow
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: bibisected, bisected, perf, regression
Depends on:
Blocks: File-Opening Regressions-1024plus-Columns
  Show dependency treegraph
 
Reported: 2022-11-07 15:08 UTC by ted
Modified: 2023-06-16 07:28 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
xlsx Spreadsheet (15.94 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2022-11-13 10:41 UTC, ted
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ted 2022-11-07 15:08:38 UTC
I upgraded to 7.4 but found that opening an xlsx spreadsheet has become very slow. I tried the latest available release with the same result. I have reverted to 7.3.7 and that is fine. Not a large spreadsheet, so that should not be the problem,  I will continue with 7.3 in the meantime.
Comment 1 m_a_riosv 2022-11-07 17:58:21 UTC
Please attach a sample file showing the issue.

BTW Please test in safe mode, Menu/Help/Restart in Safe Mode
Comment 2 ted 2022-11-08 16:07:36 UTC
I have now removed V7.4 from my system so cannot do further testing. The simple fact is that any xlsx file opens very slowly on 7.4.x, as shown by progress bar, but almost instantly on 7.3.  I am sticking with 7.3
Comment 3 QA Administrators 2022-11-09 04:03:51 UTC Comment hidden (obsolete)
Comment 4 Roman Kuznetsov 2022-11-12 15:15:46 UTC
We can't help and deveopers can't fix the problem if you will not give us the file example

Set to NEEDINFO while we'll get the exaple. Thanks
Comment 5 ted 2022-11-13 10:41:20 UTC
Created attachment 183561 [details]
xlsx Spreadsheet

I have attached a xlsx document for you.  It is academic because any xlsx spreadsheet has the same delay in opening.
Comment 6 m_a_riosv 2022-11-13 22:20:39 UTC
Something no good for calc at load the xlsx, it doesn't disappear save as ods and reopening and saving as xlsx.
What makes clean the issue is selecting all sheet and copying to a new file (through Menu/Sheets/Copy-Move, right-click breaks the selection).
Even cleaning all data and formatting, saving as ods, then as xlsx, and load. The delay persist.

Reproducible
Version: 7.4.3.1 (x64) / LibreOffice Community
Build ID: 3793858a34d8fef5b92f8fee233f97766f05e281
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3c0be5564afe1b9cc843a49aba88b72af74c43ab
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

Last working much much better
Version: 7.3.7.2 (x64) / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES Calc: CL
Comment 7 Roman Kuznetsov 2022-12-19 16:56:52 UTC
I bisected this one in win64-7.4 bisect repo and got

https://git.libreoffice.org/core/commit/4c5f8ccf0a2320432b8fe91add1dcadf54d9fd58

https://gerrit.libreoffice.org/c/core/+/131180

Added to CC: Luboš Luňák

Luboš, please take a look, thanks.
Comment 8 Timur 2023-06-07 08:50:46 UTC
7.3 latest 1,55s user 0,24s system 73% cpu 2,460 total
7.4 latest 7,72s user 0,25s system 93% cpu 8,487 total
7.5 latest 7,53s user 0,23s system 90% cpu 8,524 total
7.6+       7,41s user 0,20s system 91% cpu 8,327 total
Comment 9 Roman Kuznetsov 2023-06-07 09:16:25 UTC
Noel, may you can look at this perf regression?
Comment 10 Roman Kuznetsov 2023-06-14 08:18:19 UTC
https://gerrit.libreoffice.org/c/core/+/153006
Comment 11 Commit Notification 2023-06-14 09:08:31 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e0ef3fed69864530da49cecb09fcc2fcc9acfeaa

tdf#151946 cache LocaleDataWrapper

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-06-16 07:28:50 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ce28e756c3dde56b59cf80c7e6f21f305e76eb25

tdf#151946 cache LocaleDataWrapper

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.