tdf#151946 cache LocaleDataWrapper

because it is a little more expensive these days to create it, since I
made it an immutable type (which is also why we can safely cache it)

Reduces load time from 7s to 1.5s for me

Change-Id: I583381f0ee5494b8edf746b2329ac5751a9e5d86
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153006
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157301
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>